# thoughtworks

./: .gitignore  CMakeLists.txt  README.md  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  main.cpp
lib/: Board.cpp  Board.h  Circle.cpp  Circle.h  Display.cpp  Display.h  Game.cpp  Game.h  Math.cpp  Math.h
tests/: CMakeLists.txt  setup.cpp  test_board.cpp  test_circle.cpp
